minor layout bug fix and fix styling.

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,7 @@ body,
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --tertiary: 28 95% 92%;
+    --tertiary-foreground: 28 84% 94%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
